samples/_failures_safe/1761184866_b1153e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95e46f74.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_95e46f74.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
